Bugfix: No icons in ru; Overlaping name with buttons

--- a/static/base.css
+++ b/static/base.css
@@ -58,3 +58,7 @@ a:hover {
     background-color: var(--link-color);
     color: var(--main-bg-color);
 }
+
+.container-fluid {
+    padding-top: 3rem;
+}
